--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
+    "@svgr/webpack": "^8.1.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +28,7 @@
     "eslint-config-next": "15.1.4",
     "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
+    "supabase": "^2.22.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
